--- a/create-tradingview-alerts-home/package.json
+++ b/create-tradingview-alerts-home/package.json
@@ -1,25 +1,7 @@
 {
-  "name": "@alleyway/create-tradingview-alerts-home",
-  "version": "1.10.0",
-  "license": "MIT",
-  "type": "module",
-  "bin": {
-    "create-tradingview-alerts-home": "/dist/index.js"
-  },
-  "scripts": {
-    "build": "npx tsc && mkdir -p dist/init && cp src/init/* dist/init/",
-    "prepublishOnly": "npm run build",
-    "release": "npx release-it minor --no-git --verbose",
-    "release-beta": "npx release-it prerelease --no-git --verbose --preReleaseId='beta'"
-  },
-  "devDependencies": {
-    "@release-it/bumper": "^5.0.0",
-    "release-it": "^16.1.2",
-    "typescript": "^5.1.6"
-  },
+  "name": "tradingview-alerts-home",
+  "version": "1.0.0",
   "dependencies": {
-    "kleur": "^4.1.5",
-    "prompts": "^2.4.1",
-    "@types/node": "16.11.7"
+    "@alleyway/add-tradingview-alerts-tool": "latest"
   }
 }
